--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/a16019/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\henri\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
